--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js: "node"
 
 before_deploy:
-  - npm run build
+  - Echo 'Love auto-deploy'
   
 deploy:
   skip_cleanup: true
