--- a/v4/package.json
+++ b/v4/package.json
@@ -7,7 +7,7 @@
     "test": "echo 'GO'",
     "build": " parcel build src/index.html --public-url '/'",
     "start": "parcel src/index.html",
-    "publish": "npm run build && surge ./dist/ cryptofiddle.com"
+    "publish": "(shx rm -rf ./dist/ || true) && npm run build && surge ./dist/ cryptofiddle.com"
   },
   "author": "mathiasrw",
   "license": "MIT",
@@ -20,8 +20,10 @@
     "r2": "^2.0.0"
   },
   "devDependencies": {
+    "node-sass": "^4.7.2",
     "parcel-bundler": "^1.4.1",
     "purecss": "^1.0.0",
+    "shx": "^0.2.2",
     "typescript": "^2.6.2"
   }
 }
